Added css values INITIAL and INHERIT